k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlists
  labels:
    app: wishlists
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wishlists
  template:
    metadata:
      labels:
        app: wishlists
    spec:
      containers:
        - name: wishlists
          image: cluster-registry:5000/wishlists:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
