k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlists
  labels:
    app: wishlists
spec:
  selector:
    app: wishlists
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
