k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wishlists
  labels:
    app: wishlists
spec:
  ingressClassName: traefik
  rules:
    - host: wishlists.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wishlists
                port:
                  number: 80
